# comfyui-gender-tag-filter

./: .markdownlint.json  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  __init__.py  comfyui_dedupe_tags.py  comfyui_spacy_loader.py  gender_nl_filter.py  gender_shared.py  gender_tag_filter.py  install.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md  question.md
.github/workflows/: publish.yml
